Fix bug with overflowing on the cards and use flex on parent

--- a/style.css
+++ b/style.css
@@ -113,26 +113,31 @@ main {
     display: grid;
     grid-template-columns: 3fr 1fr;
     background: #932480;
-    width: 100%;
 
     grid-area: main;
 }
 
-.card-wrap {
-    display: grid;
-    width: 100%;
-    gap: 20px;
-    background: #440909;
-    padding: 30px;
-
+.main-left {
+    display: flex;
+    flex-direction: column;
+    background: #102c7e;
 }
 
-.card {
-    background: #000;
-    height: 200px;
-    padding: 10px;
-    border: 2px solid white;
+.card-container {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    grid-auto-rows: 100px;
+    gap: 20px;
+    padding: 40px;
+    background: #9b1717f3;
 
+    flex: 1;
+}
+
+.card{
+    background: #000;
+    height: 100px;
+    border: 2px solid white;
 }
 
 .main-right {
